add button and functionality

--- a/src/sprites.css
+++ b/src/sprites.css
@@ -270,3 +270,24 @@ fox-eating.fox {
 body {
     background-image: url(bg/Canvas.png);
 }
+
+.num {
+    height: 65px;
+    width: 65px;
+    background-color: rgb(176, 112, 237, 0.5);
+    color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.numbering {
+    width: 374px;
+    height: 67px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    top: 610px;
+    left: 194px; 
+    display: none;
+}
