add features (rain, sleep, hatching, day

--- a/src/sprites.css
+++ b/src/sprites.css
@@ -173,6 +173,7 @@ fox-eating.fox {
     width: 175px;
     height: 217px;
     animation: hatching 4s steps(7);
+
 }
 
 @keyframes hatching {
@@ -267,6 +268,14 @@ fox-eating.fox {
     background-image: url(./bg/NIGHT.png);
 }
 
+.game.dead {
+    background-image: url(./bg/DEAD.png);
+}
+
+.game.rain {
+    background-image: url(./bg/RAINY.png);
+}
+
 body {
     background-image: url(bg/Canvas.png);
 }
@@ -288,6 +297,6 @@ body {
     display: flex;
     justify-content: space-between;
     top: 610px;
-    left: 194px; 
+    left: 194px;
     display: none;
 }
