--- a/src/sprites.css
+++ b/src/sprites.css
@@ -145,7 +145,7 @@
     }
 }
 
-fox-eating.fox {
+.fox-eating.fox {
     background-image: url(./pet/Eating.png);
     background-position: -1865.7px;
     background-repeat: no-repeat;
